--- a/TributePage/style.css
+++ b/TributePage/style.css
@@ -1,9 +1,19 @@
-#main {
-  width: 80%;
-  height: auto;
-  border: 1px solid black;
+* {
+  box-sizing: border-box;
 }
 
+#main {
+  width: 100%;
+  height: auto;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  font-family: Kalam, sans-serif;
+  padding: 1em;
+  background-color: rgba(0, 0, 0, 0.1);
+  min-width: 650px;
+}
+body {
+  margin: 0;
+}
 body,
 #main,
 figure,
@@ -13,8 +23,68 @@ figure,
   flex-direction: column;
 }
 
+#title h1 {
+  margin-bottom: 0.2em;
+  font-size: 4em;
+}
+
+#title h4 {
+  /* margin-left: 10%; */
+  text-align: center;
+  margin-top: 0;
+  font-size: 1.7em;
+  color: rgba(0, 0, 0, 0.4);
+}
+
 img {
   width: 100%;
   height: auto;
   max-width: 1024px;
+  border: 1px inset rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  filter: brightness(0.9);
 }
+
+figure figcaption {
+  padding-top: 0.3em;
+  line-height: 1em;
+}
+
+#img-div {
+  margin-bottom: 4em;
+}
+
+section {
+  padding: 1em;
+}
+section ul li {
+  list-style-type: none;
+  border: 1px solid transparent;
+  border-bottom-color: rgba(0, 0, 0, 0.4);
+}
+
+section ul li p {
+  font-size: 1.3em;
+}
+
+section ul li p span.year {
+  font-weight: bold;
+  font-size: 1.8em;
+}
+
+blockquote {
+  font-size: 1.5em;
+  padding: 1em;
+  border: 1px solid transparent;
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.7);
+}
+
+blockquote cite {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+footer {
+  font-size: 1.2em;
+}
+
+@media;
